# mcp_fh-swf

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  po_api.py  pyproject.toml  release_config.json  requirements.txt  sonar-project.properties
.github/workflows/: release.yaml  sonar.yaml
data_preprocessing/scripts/: PDF_Preprocess.ipynb  TableExtraction.ipynb  chroma.py  chroma_employees.py  docling_pruefungsordnungen.ipynb  graphdatenbank.ipynb  graphdatenbank_test.ipynb  vpis.ipynb
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  neo4j.yaml  po_deployment.yaml  po_ingress.yaml  pvc.yaml
src/: __init__.py  appointme_mcp.py  bib_mcp.py  calendly_mcp.py  faq_mcp.py  fhswf_mcp.py  graphdata_mcp.py  main.py  mensa.py  middleware.py  news_events_mcp.py  po_mcp.py  portale_mcp.py  vpis_mcp.py
src/common/: Neo4jHandler.py  auth.py  calendly.py  neo4j_help_function.py  pdfCrawler.py  po_auth.py  po_pipeline.py  po_repository.py  po_s3.py  study_programs.py  types.py  vpis.py
src/llm_graph/: llm_graph_transformer_in_depth.ipynb
src/server/: faq.py  mitarbeiter.py  news_events.py  portale.py  pruefungsordnungen.py
