[project]
name = "fh_swf_mcp"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "demjson3>=3.0.6",
    "fastmcp>=2.12.5",
    "neo4j>=6.0.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "mcp-auth-middleware>=0.1.8"
]
